<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
         
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.yang</groupId>
    	<artifactId>main</artifactId>
        <version>1.0</version>
    </parent>
    
    <artifactId>ui</artifactId>
    <packaging>jar</packaging>
    <name>Yang Ui</name>
    
    <properties>
		<yang.browser.class>com.yang.ui.App</yang.browser.class>
		<yang.browser.jar>NetconfBrowserApp</yang.browser.jar>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
    
    <build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<useSystemClassLoader>false</useSystemClassLoader>
						<testFailureIgnore>true</testFailureIgnore>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<overWriteReleases>true</overWriteReleases>
							<overWriteSnapshots>true</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
							<prependGroupId>true</prependGroupId>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			 <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
					 	<index>true</index>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>com.yang.ui.App</mainClass>
						</manifest>
						<manifestEntries>
			              <Multi-Release>true</Multi-Release>
			            </manifestEntries>
					</archive>
				</configuration>
			</plugin>
			
			<plugin>
				  <groupId>org.apache.maven.plugins</groupId>
				  <artifactId>maven-compiler-plugin</artifactId>
				  <version>3.8.0</version>
				  <configuration>
				    <source>17</source>                                                
				    <target>17</target>                                                
				    <release>17</release>                                              
				    <executable>javac17</executable>
				    <fork>false</fork>                            
				    <encoding>UTF-8</encoding>
				    <!-- see https://github.com/rzwitserloot/lombok/issues/985#issuecomment-356135454 -->
				    <annotationProcessorPaths>
				      <path>
				        <groupId>org.projectlombok</groupId>
				        <artifactId>lombok</artifactId>
				        <version>1.18.24</version>
				      </path>
				    </annotationProcessorPaths>
				    <showWarnings>true</showWarnings>
				  </configuration>
				  <dependencies>                                                         
				    <dependency>                                                       
				      <groupId>org.ow2.asm</groupId>                                 
				      <artifactId>asm</artifactId>                                   
				      <version>6.2</version>
				    </dependency>                                                      
				  </dependencies>
			</plugin>				
			
		</plugins>
		
		<resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                	<include>**/*.png</include>
                	<include>**/*.jpg</include>
                	<include>**/*.gif</include>
                    <include>**/*.fxml</include>
                    <include>**/*.css</include>
                    <include>**/*.properties</include>
                     <include>**/*.ttf</include>
                     <include>**/*.xml</include>
                </includes>
            </resource>
             <resource>
                <directory>src/main/java/fonts</directory>
                <includes>
                    <include>**/*.png</include>
                    <include>**/*.jpg</include>
                    <include>**/*.gif</include>
                    <include>**/*.fxml</include>
                    <include>**/*.css</include>
                    <include>**/*.properties</include>
                     <include>**/*.ttf</include>
                     <include>**/*.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                	<include>**/*.conf</include>
                    <include>**/*.png</include>
                    <include>**/*.jpg</include>
                    <include>**/*.gif</include>
                    <include>**/*.xml</include>
                    <include>**/*.css</include>
                    <include>**/*.properties</include>
                    <include>**/*.ttf</include>
                    <include>**/*.yang</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources/fonts</directory>
                <includes>
                    <include>**/*.png</include>
                    <include>**/*.jpg</include>
                    <include>**/*.gif</include>
                    <include>**/*.xml</include>
                    <include>**/*.css</include>
                    <include>**/*.properties</include>
                    <include>**/*.ttf</include>
                    <include>**/*.yang</include>
                </includes>
            </resource>
        </resources>
	</build>
    
    
  	<repositories>
  							 						<!-- FontawesomeFX Repository -->
       
       <repository>		  							<!-- Opendaylight Release Repository -->
           <id>opendaylight-release</id>
           <name>opendaylight-release</name>
           <url>http://nexus.opendaylight.org/content/repositories/opendaylight.release/</url>
       </repository>
       
       
        <repository>		  							<!-- RichTextFX Release Repository -->
           <id>richtextfx-release</id>
           <name>richtextfx-release</name>
           <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
       </repository>
   </repositories>
   
            
    <profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<version>3.0.0</version>
					</plugin>
					
					<plugin>
		                <groupId>org.openjfx</groupId>
		                <artifactId>javafx-maven-plugin</artifactId>
		                <version>0.0.8</version>
		                <configuration>
		                    <jlinkImageName>hellofx</jlinkImageName>
		                    <launcher>launcher</launcher>
		                    <mainClass>com.yang.ui.App</mainClass>
		                    
		                     <options>
					            <option>--add-modules</option>
					            <option>javafx.controls,javafx.fxml,javafx.graphics,org.opendaylight.yangtools.yang.parser.rfc7950</option>
					            <option>--add-exports</option>
					            <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
					            <option>--add-exports</option>
					            <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
					            <option>--add-exports</option>
					            <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
								 <option>--add-opens</option>
								 <option>javafx.graphics/javafx.scene.text=ALL-UNNAMED</option>
								 <option>--add-exports</option>
								 <option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
								 <option>--add-exports</option>
								 <option>org.opendaylight.yangtools.yang.parser.rfc7950/org.opendaylight.yangtools.yang.parser.rfc7950.antlr=ALL-UNNAMED</option>

							 </options>
		                </configuration>
		            </plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.0.0</version>
						<configuration>
							<finalName>${yang.browser.jar}-${project.version}</finalName>
							<descriptors>
								<descriptor>src/assembly/bin.xml</descriptor>
							</descriptors>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
						<executions>
							<execution>
								<id>create-zip</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<!-- ensure some file exists -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<version>3.0.0-M2</version>
						<executions>
							<execution>
								<id>enforce-files-exist</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireFilesExist>
											<files>
												<file>src/main/resources</file>
												<file>linuxInstaller/NetconfBrowserApp/bin/start.sh</file>
												<file>linuxInstaller/NetconfBrowserApp/bin/stop.sh</file>
											</files>
										</requireFilesExist>
									</rules>
									<fail>true</fail>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
	
    <dependencies>
    
     <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>15</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>15</version>
        </dependency>
    

	    <dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		   <version>1.4.197</version>
		</dependency>

		<dependency>
		    <groupId>com.typesafe</groupId>
		    <artifactId>config</artifactId>
		    <version>1.4.2</version>
		</dependency>
    
    
        
        
    	   												<!-- https://github.com/FXMisc/RichTextFX Dependencies -->
          <!--dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.10.9</version>
        </dependency-->
    
    
    	<dependency>
            <groupId>org.reactfx</groupId>
            <artifactId>reactfx</artifactId>
            <version>2.0-M5</version>
        </dependency>
        
        <dependency>
            <groupId>org.fxmisc.undo</groupId>
            <artifactId>undofx</artifactId>
            <version>2.1.1</version>
        </dependency>
        
         <dependency>
            <groupId>org.fxmisc.flowless</groupId>
            <artifactId>flowless</artifactId>
            <version>0.6.9</version>
        </dependency>
        
        <dependency>
            <groupId>org.fxmisc.wellbehaved</groupId>
            <artifactId>wellbehavedfx</artifactId>
            <version>0.3.3</version>
        </dependency>
    
    
    
    	<dependency>
			<groupId>com.yang</groupId>
		    <artifactId>client</artifactId>
		    <version>1.0</version>
		</dependency>
		
								<!-- DOM4J and related dependencies -->
		<dependency>
		    <groupId>org.dom4j</groupId>
		    <artifactId>dom4j</artifactId>
		    <version>2.1.3</version>
		</dependency>
    							<!-- Apache Commons Lang dependency used to generate strings & ints -->
     	 <dependency>
		    <groupId>commons-lang</groupId>
		    <artifactId>commons-lang</artifactId>
		    <version>2.6</version>
		 </dependency>
		
		
    												<!-- afterburner.fx Dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- dependency> We use a modified version of this module !!! -> We added a "/" to inject properties from a single properties file instead of multiple files
            <groupId>com.airhacks</groupId>
            <artifactId>afterburner.fx</artifactId>
            <version>1.7.0</version>
            <scope>compile</scope>
        </dependency -->
         <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
            <scope>compile</scope>
        </dependency>
        
        											<!-- JFoenix Dependencies -->
        <dependency>
		    <groupId>com.jfoenix</groupId>
		    <artifactId>jfoenix</artifactId>
		    <version>9.0.10</version>
		</dependency>

        
            										<!-- FontawesomeFX Dependencies -->
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-commons</artifactId>
		    <version>9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-materialicons</artifactId>
		    <version>2.2.0-9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-fontawesome</artifactId>
		    <version>4.7.0-9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-weathericons</artifactId>
		   <version>2.0.10-9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-materialdesignfont</artifactId>
		   <version>2.0.26-9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-icons525</artifactId>
		     <version>4.2.0-9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-octicons</artifactId>
		    <version>4.3.0-9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-controls</artifactId>
		    <version>9.1.2</version>
		</dependency>
		<dependency>
		    <groupId>de.jensd</groupId>
		    <artifactId>fontawesomefx-emojione</artifactId>
		    <version>3.1.1-9.1.2</version>
		</dependency>
		   											<!-- Opendaylight Dependencies -->
		<dependency>
		    <groupId>com.github.romix</groupId>
		    <artifactId>java-concurrent-hash-trie-map</artifactId>
		    <version>0.2.23</version>
		</dependency>

		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-parser-rfc7950</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>concepts</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>util</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-common</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-data-api</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-data-impl</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-data-util</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-model-api</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-model-util</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-parser-api</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-parser-impl</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.opendaylight.yangtools</groupId>
			<artifactId>yang-xpath-api</artifactId>
			<version>9.0.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.10.1</version>
		</dependency>
		
													<!-- Logging Dependencies: This pulls into the repository 2 dependencies: 
													     	1. Logback -> (logback-classic-1.0.13.jar, logback-core-1.0.13.jar)
													     	2. SLF4J   -> (slf4j-api-1.8.0-beta2.jar)  
													-->
		<dependency>
		    <groupId>ch.qos.logback</groupId>
		    <artifactId>logback-classic</artifactId>
		    <version>1.1.7</version>
		</dependency>
      
      
    </dependencies>
</project>
